--- a/HDF/style.css
+++ b/HDF/style.css
@@ -17,7 +17,7 @@
 */
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 * {
-	margin: -10px 0px 0px 0px;
+	margin: 0;
 	padding: 0;
 }
 
